Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44045

QLocale::toDouble documentation not updated to Qt5

XMLWordPrintable

      in QLocale:toDouble is documented line:

      "Unlike QString::toDouble(), this function does not fall back to the "C" locale if the string cannot be interpreted in this locale."

      But QString::toDouble string conversion will always happen in the 'C' locale. It's not anymore (in Qt5) use default locale and fall back to 'C' like in Qt4.

        For Gerrit Dashboard: QTBUG-44045
        # Subject Branch Project Status CR V

            kdpalara Kavindra Palaraja
            qtcomsupport Qt Support
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes